@@ -1,26 +1,21 @@
 package com.nhnacademy.sensordata.service;
 
-import com.influxdb.client.InfluxDBClient;
-import com.influxdb.client.QueryApi;
-import com.nhnacademy.sensordata.measurement.temperature.Temperature;
-import com.nhnacademy.sensordata.measurement.temperature.TemperatureMaxMinDaily;
-import com.nhnacademy.sensordata.measurement.temperature.TemperatureMaxMinMonthly;
-import com.nhnacademy.sensordata.measurement.temperature.TemperatureMaxMinWeekly;
 import com.nhnacademy.sensordata.exception.TemperatureNotFoundException;
+import com.nhnacademy.sensordata.measurement.temperature.Temperature;
+import com.nhnacademy.sensordata.measurement.temperature.TemperatureMaxMin;
+import com.nhnacademy.sensordata.util.InfluxDBUtil;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.MOCK)
@@ -28,9 +23,7 @@ class TemperatureServiceTest {
     @Autowired
     private TemperatureService temperatureService;
     @MockBean
-    private InfluxDBClient influxDBClient;
-    @Mock
-    private QueryApi queryApi;
+    private InfluxDBUtil influxDBUtil;
 
     @Test
     void getTemperature() {
@@ -43,8 +36,7 @@ class TemperatureServiceTest {
 
         Temperature temperature = new Temperature(time, device, place, topic, value);
 
-        given(influxDBClient.getQueryApi()).willReturn(queryApi);
-        given(queryApi.query(anyString(), eq(Temperature.class))).willReturn(List.of(temperature));
+        given(influxDBUtil.getSensorData(anyString(), eq(Temperature.class))).willReturn(Optional.of(temperature));
 
         // when
         Temperature resultTemperature = temperatureService.getTemperature();
@@ -62,8 +54,7 @@ class TemperatureServiceTest {
 
     @Test
     void getTemperatureException() {
-        given(influxDBClient.getQueryApi()).willReturn(queryApi);
-        given(queryApi.query(anyString(), eq(Temperature.class))).willReturn(Collections.emptyList());
+        given(influxDBUtil.getSensorData(anyString(), eq(Temperature.class))).willReturn(Optional.empty());
 
         assertThrows(TemperatureNotFoundException.class, () -> temperatureService.getTemperature());
     }
@@ -75,13 +66,12 @@ class TemperatureServiceTest {
         Float maxTemperature = 24.0f;
         Float minTemperature = 20.0f;
 
-        TemperatureMaxMinDaily temperature = new TemperatureMaxMinDaily(time, maxTemperature, minTemperature);
+        TemperatureMaxMin temperature = new TemperatureMaxMin(time, maxTemperature, minTemperature);
 
-        given(influxDBClient.getQueryApi()).willReturn(queryApi);
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinDaily.class))).willReturn(List.of(temperature));
+        given(influxDBUtil.getSensorDataList(any(), any(), anyString(), anyString(), eq(TemperatureMaxMin.class))).willReturn(List.of(temperature));
 
         // when
-        List<TemperatureMaxMinDaily> dailyTemperatures = temperatureService.getDailyTemperatures();
+        List<TemperatureMaxMin> dailyTemperatures = temperatureService.getDailyTemperatures();
 
         // then
         assertAll(
@@ -102,16 +92,15 @@ class TemperatureServiceTest {
         Float weeklyMaxTemperature = 24.0f;
         Float weeklyMinTemperature = 20.0f;
 
-        TemperatureMaxMinDaily temperatureMaxMinDaily = new TemperatureMaxMinDaily(time, dailyMaxTemperature, dailyMinTemperature);
-        TemperatureMaxMinWeekly temperatureMaxMinWeekly = new TemperatureMaxMinWeekly(time, weeklyMaxTemperature, weeklyMinTemperature);
+        TemperatureMaxMin temperatureMaxMinDaily = new TemperatureMaxMin(time, dailyMaxTemperature, dailyMinTemperature);
+        TemperatureMaxMin temperatureMaxMinWeekly = new TemperatureMaxMin(time, weeklyMaxTemperature, weeklyMinTemperature);
 
         // when
-        given(influxDBClient.getQueryApi()).willReturn(queryApi);
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinWeekly.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinWeekly)));
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinDaily.class))).willReturn(List.of(temperatureMaxMinDaily));
+        given(influxDBUtil.getSensorDataList(any(), any(), anyString(), anyString(), eq(TemperatureMaxMin.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinWeekly)));
+        given(influxDBUtil.getLastSensorData(any(), anyString(), eq(TemperatureMaxMin.class))).willReturn(Optional.of(temperatureMaxMinDaily));
 
         // then
-        List<TemperatureMaxMinWeekly> weeklyTemperatures = temperatureService.getWeeklyTemperatures();
+        List<TemperatureMaxMin> weeklyTemperatures = temperatureService.getWeeklyTemperatures();
 
         assertAll(
                 () -> assertNotNull(weeklyTemperatures),
@@ -132,11 +121,10 @@ class TemperatureServiceTest {
         Float weeklyMaxTemperature = 24.0f;
         Float weeklyMinTemperature = 20.0f;
 
-        TemperatureMaxMinWeekly temperatureMaxMinWeekly = new TemperatureMaxMinWeekly(time, weeklyMaxTemperature, weeklyMinTemperature);
+        TemperatureMaxMin temperatureMaxMinWeekly = new TemperatureMaxMin(time, weeklyMaxTemperature, weeklyMinTemperature);
 
-        given(influxDBClient.getQueryApi()).willReturn(queryApi);
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinWeekly.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinWeekly)));
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinDaily.class))).willReturn(Collections.emptyList());
+        given(influxDBUtil.getSensorDataList(any(), any(), anyString(), anyString(), eq(TemperatureMaxMin.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinWeekly)));
+        given(influxDBUtil.getLastSensorData(any(), anyString(), eq(TemperatureMaxMin.class))).willReturn(Optional.empty());
 
         assertThrows(TemperatureNotFoundException.class, () -> temperatureService.getWeeklyTemperatures());
     }
@@ -150,16 +138,15 @@ class TemperatureServiceTest {
         Float monthlyMaxTemperature = 24.0f;
         Float monthlyMinTemperature = 20.0f;
 
-        TemperatureMaxMinDaily temperatureMaxMinDaily = new TemperatureMaxMinDaily(time, dailyMaxTemperature, dailyMinTemperature);
-        TemperatureMaxMinMonthly temperatureMaxMinMonthly = new TemperatureMaxMinMonthly(time, monthlyMaxTemperature, monthlyMinTemperature);
+        TemperatureMaxMin temperatureMaxMinDaily = new TemperatureMaxMin(time, dailyMaxTemperature, dailyMinTemperature);
+        TemperatureMaxMin temperatureMaxMinMonthly = new TemperatureMaxMin(time, monthlyMaxTemperature, monthlyMinTemperature);
 
         // when
-        given(influxDBClient.getQueryApi()).willReturn(queryApi);
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinMonthly.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinMonthly)));
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinDaily.class))).willReturn(List.of(temperatureMaxMinDaily));
+        given(influxDBUtil.getSensorDataList(any(), any(), anyString(), anyString(), eq(TemperatureMaxMin.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinMonthly)));
+        given(influxDBUtil.getLastSensorData(any(), anyString(), eq(TemperatureMaxMin.class))).willReturn(Optional.of(temperatureMaxMinDaily));
 
         // then
-        List<TemperatureMaxMinMonthly> monthlyTemperatures = temperatureService.getMonthlyTemperatures();
+        List<TemperatureMaxMin> monthlyTemperatures = temperatureService.getMonthlyTemperatures();
 
         assertAll(
                 () -> assertNotNull(monthlyTemperatures),
@@ -180,11 +167,10 @@ class TemperatureServiceTest {
         Float weeklyMaxTemperature = 24.0f;
         Float weeklyMinTemperature = 20.0f;
 
-        TemperatureMaxMinMonthly temperatureMaxMinMonthly = new TemperatureMaxMinMonthly(time, weeklyMaxTemperature, weeklyMinTemperature);
+        TemperatureMaxMin temperatureMaxMinMonthly = new TemperatureMaxMin(time, weeklyMaxTemperature, weeklyMinTemperature);
 
-        given(influxDBClient.getQueryApi()).willReturn(queryApi);
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinMonthly.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinMonthly)));
-        given(queryApi.query(anyString(), eq(TemperatureMaxMinDaily.class))).willReturn(Collections.emptyList());
+        given(influxDBUtil.getSensorDataList(any(), any(), anyString(), anyString(), eq(TemperatureMaxMin.class))).willReturn(new ArrayList<>(List.of(temperatureMaxMinMonthly)));
+        given(influxDBUtil.getLastSensorData(any(), anyString(), eq(TemperatureMaxMin.class))).willReturn(Optional.empty());
 
         assertThrows(TemperatureNotFoundException.class, () -> temperatureService.getMonthlyTemperatures());
     }
